# apac

./: .dockerignore  .gitignore  .gitlab-ci.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DockerFile  Dockerfile  LICENSE  README.md  SUPPORT.md  apac.sh  optimizedGraph.dot  rawGraph.dot  rewritersample.cpp  rewritersample.h  rewritersample_original.cpp  rewritersample_var.cpp  test.cpp  test.sh  test_old.cpp
Transformations/: CMakeLists.txt
Transformations/ApacDepth/: CMakeLists.txt
Transformations/ApacDepth/include/: ASTDepthAddVisitor.hpp  apacDepth.hpp  codeModification.hpp
Transformations/ApacDepth/src/: ASTDepthAddVisitor.cpp  CMakeLists.txt  apacDepth.cpp  codeModification.cpp
Transformations/ApacDepth/tests/: test.sh
Transformations/ApacDepth/tests/expected/: nonRecursiveCalls.cpp
Transformations/ConditionUnstack/: CMakeLists.txt
Transformations/ConditionUnstack/include/: ASTConditionUnstackVisitor.hpp  conditionUnstack.hpp
Transformations/ConditionUnstack/src/: ASTConditionUnstackVisitor.cpp  CMakeLists.txt  conditionUnstack.cpp  main.cpp
Transformations/ConditionUnstack/tests/: test.sh
Transformations/ConditionUnstack/tests/autotests/: for.cpp  if.cpp  while.cpp
Transformations/ConditionUnstack/tests/expected/: for.cpp  if.cpp  ifElse.cpp
Transformations/Constify/: CMakeLists.txt
Transformations/Constify/include/: ASTConstifyVisitor.hpp  ASTInitVisitor.hpp  ASTPrintVisitor.hpp  SymTab.hpp  core.hpp  rewritersample.hpp
Transformations/Constify/src/: ASTConstifyVisitor.cpp  ASTInitVisitor.cpp  ASTPrintVisitor.cpp  CMakeLists.txt  SymTab.cpp  core.cpp  main.cpp  rewritersample.cpp
Transformations/Constify/tests/: test.sh  vector.cpp
Transformations/Constify/tests/autotests/: test_apac_constify_args.cpp  test_apac_constify_functions_arguments.cpp  test_header.cpp  test_header.hpp  test_header2.hpp  test_quicksort.cpp  test_system_variable.cpp  test_vector.cpp
Transformations/Constify/tests/testToAuto/: quicksort.cpp
Transformations/DeclarationSplitter/: CMakeLists.txt
Transformations/DeclarationSplitter/include/: ASTSplitterVisitor.hpp  declarationSplitter.hpp
Transformations/DeclarationSplitter/src/: ASTSplitterVisitor.cpp  CMakeLists.txt  declarationSplitter.cpp
Transformations/DeclarationSplitter/tests/: test.sh
Transformations/DeclarationSplitter/tests/autotests/: alternativeDecl.cpp  constructor.cpp  multipleDecl.cpp  noDefaultConst.cpp  references.cpp  simpleDecl.cpp
Transformations/DeclarationSplitter/tests/expected/: alternativeDecl.cpp  apacSeq.cpp  constructor.cpp  noDefaultConst.cpp  references.cpp  simpleDecl.cpp
Transformations/DuplicateFunctions/: CMakeLists.txt
Transformations/DuplicateFunctions/include/: ASTChangeNameVisitor.hpp  ASTDuplicateVisitor.hpp  duplicateFunctions.hpp
Transformations/DuplicateFunctions/src/: CMakeLists.txt  duplicateFunctions.cpp  main.cpp
Transformations/DuplicateFunctions/tests/: test.sh
Transformations/DuplicateFunctions/tests/expected/: recursive.cpp  simpleFunctions.cpp
Transformations/GotoTransfo/: CMakeLists.txt
Transformations/GotoTransfo/include/: ASTGotoVisitor.hpp  gotoRet.hpp  gotoRetHeader.hpp
Transformations/GotoTransfo/src/: ASTGotoVisitor.cpp  CMakeLists.txt  gotoRet.cpp
Transformations/GotoTransfo/tests/: test.sh
Transformations/GotoTransfo/tests/autotests/: _apac_header.hpp  boolReturn.cpp  ifElse.cpp  noDefaultConstr.cpp  simpleReturn.cpp  voidSingleReturn.cpp  voidType.cpp
Transformations/GotoTransfo/tests/expected/: apacSeq.cpp  boolReturn.cpp  ifElse.cpp  noDefaultConstr.cpp  simpleReturn.cpp  spaceAfterReturn.cpp  voidType.cpp
Transformations/Heapify/: CMakeLists.txt
Transformations/Heapify/include/: ASTHeapifyVisitor.hpp  core.hpp  fileModification.hpp  stackheap.hpp  stringManipulation.hpp  utilitaryFunctions.hpp
Transformations/Heapify/src/: ASTHeapifyVisitor.cpp  CMakeLists.txt  fileModification.cpp  main.cpp  stackheap.cpp  stringManipulation.cpp  utilitaryFunctions.cpp
Transformations/Heapify/tests/: test.sh
Transformations/Heapify/tests/autotests/: apac_test.cpp  array.cpp  existingNew.cpp  forLoops.cpp  functions.cpp  goto.cpp  ifElse.cpp  ifElseVar.cpp  multiDimArray.cpp  multipleDecl.cpp  (+6 more)
Transformations/MainParallel/: CMakeLists.txt
Transformations/MainParallel/include/: ASTMainParaVisitor.hpp  mainParallel.hpp
Transformations/MainParallel/src/: CMakeLists.txt  main.cpp  mainParallel.cpp
Transformations/MainParallel/tests/: test.sh
Transformations/MultipleDeclSplitter/: CMakeLists.txt
Transformations/MultipleDeclSplitter/include/: ASTMultipleDeclSplitter.hpp  multipleDeclSplitter.hpp
Transformations/MultipleDeclSplitter/src/: CMakeLists.txt  main.cpp  multipleDeclSplitter.cpp
Transformations/TaskGraph/: CMakeLists.txt
Transformations/TaskGraph/include/: ASTDepthAddVisitor.hpp  ASTTaskGraphVisitor.hpp  AliasArg.hpp  AliasTable.hpp  AliasTableMaps.hpp  Graph.hpp  Instruction.hpp  InstructionsOrderManager.hpp  Node.hpp  NodeDependency.hpp  OutputHandler.hpp  PotTaskGraphInterface.hpp  codeModification.hpp  generateGraph.hpp  taskGraph.hpp
Transformations/TaskGraph/src/: ASTTaskGraphVisitor.cpp  AliasArg.cpp  AliasTable.cpp  AliasTableAliasMap.cpp  AliasTableIndexMap.cpp  AliasTableMaps.cpp  CMakeLists.txt  Graph.cpp  InstructionsOrderManager.cpp  Node.cpp  OutputHandler.cpp  codeModification.cpp  generateGraph.cpp  main.cpp  taskGraph.cpp
Transformations/TaskGraph/tests/: test.sh
Transformations/Unstack/: CMakeLists.txt
Transformations/Unstack/include/: ASTUnstackVisitor.hpp  createUnstackString.hpp  unstack.hpp
Transformations/Unstack/src/: ASTUnstackVisitor.cpp  CMakeLists.txt  createUnstackString.cpp  helperFunctions.cpp  main.cpp  unstack.cpp
Transformations/Unstack/tests/: test.sh
core/: CMakeLists.txt
mainProgram/src/: CMakeLists.txt  apac.cpp
src/: ASTConstifyVisitor.cpp  ASTHeapifyVisitor.cpp  ASTInitVisitor.cpp  ASTPrintVisitor.cpp  CMakeLists.txt  SymTab.cpp  core.cpp  rewritersample.cpp  stackheap.cpp  stringManipulation.cpp  utilitaryFunctions.cpp
(+438 files in other folders)
